[package]
name = "adventofcode"
version = "0.1.0"
edition = "2021"

[dependencies]
sabi = { git = "https://github.com/VilotStar/unitedrust", branch = "sabi" }
rouille = { git = "https://github.com/VilotStar/unitedrust", branch = "rouille" }
rdza = { git = "https://github.com/VilotStar/unitedrust", branch = "rdza" }